# create-cpp-meson

./: .gitignore  README.md  meson.build
include/: utils.hpp
src/: main.cpp
